radix-transactions/tests/assets/manifest_generator_error_invalid_ast_value_2.diag
error: expected String, found Decimal
   |
 6 | CALL_METHOD
 7 |     Address("component_sim1cptxxxxxxxxxfaucetxxxxxxxxx000527798379xxxxxxxxxhkrefh")
 8 |     "create_proof_of_amount"
 9 |     Address("resource_sim1t5lam43hk5fg9h2x7a8zgpfxsd78539kzm4h0xugldymfexuh2wzru")
10 |     Expression(
11 |       Decimal("1")
   |       ^^^^^^^ expected String
12 |     );
   |